# useless_lavalink

./: .readthedocs.yml  README.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: codeql-analysis.yml  publish_pypi.yml  tests.yml
docs/: api_reference.rst  conf.py  index.rst
lavalink/: __init__.py  lavalink.py  node.py  player_manager.py  rest_api.py
tests/: conftest.py  test_lavalink.py  test_node.py  test_player_manager.py  test_reast_api.py
